funktioner lavet - mangler egentlig undervisningstekst

--- a/config.yaml
+++ b/config.yaml
@@ -66,6 +66,7 @@ contact: 'team@carpentries.org'
 # Order of episodes in your lesson
 episodes: 
 - introduction.Rmd
+- functions.Rmd
 
 # Information for Learners
 learners: 
