loops episode - og noter til indhold generelt

--- a/config.yaml
+++ b/config.yaml
@@ -67,6 +67,7 @@ contact: 'team@carpentries.org'
 episodes: 
 - introduction.Rmd
 - functions.Rmd
+- loops.Rmd
 
 # Information for Learners
 learners: 
